변수 초기화 수정